--- a/portfolio-frontend/src/App.css
+++ b/portfolio-frontend/src/App.css
@@ -2,23 +2,45 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+a {
+  padding: 4px;
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.Projects {
+  display: flex;
+  flex-direction: column;
+  max-width: 35%;
+  margin: auto;
+}
+
+.singleProject {
+  padding: 1%;
+  border-radius: 4px;
+  margin: 4%;
+  text-align: left;
+}
+
+.project-link {
+  text-decoration: none;
+  background-color: black;
   color: white;
+  border-radius: 3px;
+  padding: 6px 12px;
+  text-align: center;
+  display: inline-block;
+  font-size: 14px;
+  border-radius: 4px;
+  margin-right: 4px;
 }
 
-.App-intro {
-  font-size: large;
+.github-link:hover {
+  font-size: 14.5px;
+  opacity: 0.5;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.about {
+  display: inline-block;
+  max-width: 40%;
+  margin: auto;
 }
